tests/paczka1/fuzzy1/92995726.err
Error in line 3: zavohigVZG S690 53,2
Error in line 8: Vl1pol S241 133,0
Error in line 10: Vl1pol S83 94,4
Error in line 19: Vl1pol S241 64,2
Error in line 21: Vl1pol S447 73,7
Error in line 35: lVnPTsb1AGi S241 52,3
